// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<border-beam> demo: > render [active] correctly 1`] = `
<div class="sd-space sd-space-vertical sd-space-fill" style="column-gap: 20px; row-gap: 20px;">
  <!---->
  <div class="sd-space-item">
    <div style="padding: 24px; background: rgb(13, 13, 26); border-radius: 16px;">
      <div data-beam="bb-27" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
        <div style="padding: 22px 28px; background: rgb(26, 26, 46); border-radius: 16px; color: rgb(224, 224, 224); min-width: 300px;">
          <div style="font-size: 15px; font-weight: 600; margin-bottom: 12px;"> 深色背景 · 动画状态: 激活</div><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-small sd-btn-status-normal" type="button">
            <!--v-if-->停用动画
          </button>
        </div>
        <div data-beam-bloom=""></div>
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div style="padding: 24px; background: rgb(232, 232, 238); border-radius: 16px;">
      <div data-beam="bb-28" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
        <div style="padding: 22px 28px; background: rgb(255, 255, 255); border-radius: 16px; color: rgb(51, 51, 51); min-width: 300px;">
          <div style="font-size: 15px; font-weight: 600; margin-bottom: 12px;"> 浅色背景 · 动画状态: 激活</div><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-small sd-btn-status-normal" type="button">
            <!--v-if-->停用动画
          </button>
        </div>
        <div data-beam-bloom=""></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<border-beam> demo: > render [basic] correctly 1`] = `
<div class="sd-space sd-space-vertical sd-space-fill" style="column-gap: 16px; row-gap: 16px;">
  <!---->
  <div class="sd-space-item">
    <div style="padding: 24px; background: rgb(13, 13, 26); border-radius: 16px;">
      <div data-beam="bb-25" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
        <div style="min-width: 280px; padding: 20px 28px; color: rgb(224, 224, 224); background: rgb(26, 26, 46); border-radius: 16px;">
          <div style="margin-bottom: 6px; font-weight: 600; font-size: 16px;">深色背景 — 旋转光晕</div>
          <div style="font-size: 13px; opacity: 0.6;">theme="dark"（默认）</div>
        </div>
        <div data-beam-bloom=""></div>
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div style="padding: 24px; background: rgb(232, 232, 238); border-radius: 16px;">
      <div data-beam="bb-26" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
        <div style="min-width: 280px; padding: 20px 28px; color: rgb(51, 51, 51); background: rgb(255, 255, 255); border-radius: 16px;">
          <div style="margin-bottom: 6px; font-weight: 600; font-size: 16px;">浅色背景 — 旋转光晕</div>
          <div style="font-size: 13px; opacity: 0.5;">theme="light"</div>
        </div>
        <div data-beam-bloom=""></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<border-beam> demo: > render [color] correctly 1`] = `
<div class="sd-space sd-space-vertical sd-space-fill" style="column-gap: 20px; row-gap: 20px;">
  <!---->
  <div class="sd-space-item">
    <div style="padding: 20px; background: rgb(13, 13, 26); border-radius: 16px;">
      <div style="margin-bottom: 12px; color: rgb(153, 153, 153); font-size: 13px;">深色背景</div>
      <div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 16px; row-gap: 16px;">
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-17" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
            <div style="padding: 14px 22px; background: rgb(26, 26, 46); border-radius: 16px; color: rgb(224, 224, 224);">colorful</div>
            <div data-beam-bloom=""></div>
          </div>
        </div>
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-18" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
            <div style="padding: 14px 22px; background: rgb(26, 26, 46); border-radius: 16px; color: rgb(224, 224, 224);">mono</div>
            <div data-beam-bloom=""></div>
          </div>
        </div>
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-19" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
            <div style="padding: 14px 22px; background: rgb(26, 26, 46); border-radius: 16px; color: rgb(224, 224, 224);">ocean</div>
            <div data-beam-bloom=""></div>
          </div>
        </div>
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-20" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
            <div style="padding: 14px 22px; background: rgb(26, 26, 46); border-radius: 16px; color: rgb(224, 224, 224);">sunset</div>
            <div data-beam-bloom=""></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div style="padding: 20px; background: rgb(232, 232, 238); border-radius: 16px;">
      <div style="margin-bottom: 12px; color: rgb(102, 102, 102); font-size: 13px;">浅色背景</div>
      <div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 16px; row-gap: 16px;">
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-21" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
            <div style="padding: 14px 22px; background: rgb(255, 255, 255); border-radius: 16px; color: rgb(51, 51, 51);">colorful</div>
            <div data-beam-bloom=""></div>
          </div>
        </div>
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-22" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
            <div style="padding: 14px 22px; background: rgb(255, 255, 255); border-radius: 16px; color: rgb(51, 51, 51);">mono</div>
            <div data-beam-bloom=""></div>
          </div>
        </div>
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-23" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
            <div style="padding: 14px 22px; background: rgb(255, 255, 255); border-radius: 16px; color: rgb(51, 51, 51);">ocean</div>
            <div data-beam-bloom=""></div>
          </div>
        </div>
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-24" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
            <div style="padding: 14px 22px; background: rgb(255, 255, 255); border-radius: 16px; color: rgb(51, 51, 51);">sunset</div>
            <div data-beam-bloom=""></div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<border-beam> demo: > render [custom] correctly 1`] = `
<div class="sd-space sd-space-vertical sd-space-fill" style="column-gap: 20px; row-gap: 20px;">
  <!---->
  <div class="sd-space-item">
    <div style="padding: 24px; background: rgb(13, 13, 26); border-radius: 16px;">
      <div data-beam="bb-15" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1.5;">
        <div style="padding: 22px 28px; background: rgb(26, 26, 46); border-radius: 24px; color: rgb(224, 224, 224); min-width: 300px;">
          <div style="font-size: 15px; font-weight: 600; margin-bottom: 6px;">深色背景 · 自定义参数</div>
          <div style="font-size: 12px; opacity: 0.6;">圆角 24 · 密度 1.5 · 持续 3s · ocean</div>
        </div>
        <div data-beam-bloom=""></div>
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div style="padding: 24px; background: rgb(232, 232, 238); border-radius: 16px;">
      <div data-beam="bb-16" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1.5;">
        <div style="padding: 22px 28px; background: rgb(255, 255, 255); border-radius: 24px; color: rgb(51, 51, 51); min-width: 300px;">
          <div style="font-size: 15px; font-weight: 600; margin-bottom: 6px;">浅色背景 · 自定义参数</div>
          <div style="font-size: 12px; opacity: 0.5;">圆角 24 · 密度 1.5 · 持续 3s · sunset</div>
        </div>
        <div data-beam-bloom=""></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<border-beam> demo: > render [size] correctly 1`] = `
<div class="sd-space sd-space-vertical sd-space-fill" style="column-gap: 20px; row-gap: 20px;">
  <!---->
  <div class="sd-space-item">
    <div style="padding: 20px; background: rgb(13, 13, 26); border-radius: 16px;">
      <div style="margin-bottom: 12px; color: rgb(153, 153, 153); font-size: 13px;">深色背景 (theme="dark")</div>
      <div class="sd-space sd-space-vertical sd-space-fill" style="column-gap: 16px; row-gap: 16px;">
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-5" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-small sd-btn-status-normal" type="button">
              <!--v-if-->小尺寸 sm
            </button>
            <div data-beam-bloom=""></div>
          </div>
        </div>
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-6" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
            <div style="padding: 18px 24px; background: rgb(26, 26, 46); border-radius: 16px; color: rgb(224, 224, 224);">中尺寸 md（默认）</div>
            <div data-beam-bloom=""></div>
          </div>
        </div>
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-7" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
            <div style="padding: 18px 24px; background: rgb(26, 26, 46); border-radius: 16px; color: rgb(224, 224, 224); min-width: 300px;">线条 line</div>
            <div data-beam-bloom=""></div>
          </div>
        </div>
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-8" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
            <div style="padding: 18px 24px; background: rgb(26, 26, 46); border-radius: 16px; color: rgb(224, 224, 224); min-width: 300px;">脉冲内 pulse-inner</div>
            <div data-beam-bloom=""></div>
          </div>
        </div>
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-9" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1; --pulse-glow-sx: 1; --pulse-glow-sy: 1;">
            <div style="padding: 18px 24px; background: rgb(26, 26, 46); border-radius: 16px; color: rgb(224, 224, 224); min-width: 300px;">脉冲外 pulse-outside</div>
            <div data-beam-bloom=""></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div style="padding: 20px; background: rgb(232, 232, 238); border-radius: 16px;">
      <div style="margin-bottom: 12px; color: rgb(102, 102, 102); font-size: 13px;">浅色背景 (theme="light")</div>
      <div class="sd-space sd-space-vertical sd-space-fill" style="column-gap: 16px; row-gap: 16px;">
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-10" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;"><button class="sd-btn sd-btn-primary sd-btn-shape-square sd-btn-size-small sd-btn-status-normal" type="button">
              <!--v-if-->小尺寸 sm
            </button>
            <div data-beam-bloom=""></div>
          </div>
        </div>
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-11" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
            <div style="padding: 18px 24px; background: rgb(255, 255, 255); border-radius: 16px; color: rgb(51, 51, 51);">中尺寸 md（默认）</div>
            <div data-beam-bloom=""></div>
          </div>
        </div>
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-12" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
            <div style="padding: 18px 24px; background: rgb(255, 255, 255); border-radius: 16px; color: rgb(51, 51, 51); min-width: 300px;">线条 line</div>
            <div data-beam-bloom=""></div>
          </div>
        </div>
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-13" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
            <div style="padding: 18px 24px; background: rgb(255, 255, 255); border-radius: 16px; color: rgb(51, 51, 51); min-width: 300px;">脉冲内 pulse-inner</div>
            <div data-beam-bloom=""></div>
          </div>
        </div>
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-14" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1; --pulse-glow-sx: 1; --pulse-glow-sy: 1;">
            <div style="padding: 18px 24px; background: rgb(255, 255, 255); border-radius: 16px; color: rgb(51, 51, 51); min-width: 300px;">脉冲外 pulse-outside</div>
            <div data-beam-bloom=""></div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<border-beam> demo: > render [theme] correctly 1`] = `
<div class="sd-space sd-space-vertical sd-space-fill" style="column-gap: 20px; row-gap: 20px;">
  <!---->
  <div class="sd-space-item">
    <div style="padding: 24px; background: rgb(13, 13, 26); border-radius: 16px;">
      <div style="margin-bottom: 12px; color: rgb(153, 153, 153); font-size: 13px;">深色背景</div>
      <div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 20px; row-gap: 20px;">
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-1" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
            <div style="padding: 14px 22px; background: rgb(26, 26, 46); border-radius: 16px; color: rgb(224, 224, 224);">dark</div>
            <div data-beam-bloom=""></div>
          </div>
        </div>
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-2" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
            <div style="padding: 14px 22px; background: rgb(26, 26, 46); border-radius: 16px; color: rgb(224, 224, 224);">auto</div>
            <div data-beam-bloom=""></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div style="padding: 24px; background: rgb(232, 232, 238); border-radius: 16px;">
      <div style="margin-bottom: 12px; color: rgb(102, 102, 102); font-size: 13px;">浅色背景</div>
      <div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 20px; row-gap: 20px;">
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-3" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
            <div style="padding: 14px 22px; background: rgb(255, 255, 255); border-radius: 16px; color: rgb(51, 51, 51);">light</div>
            <div data-beam-bloom=""></div>
          </div>
        </div>
        <!---->
        <div class="sd-space-item">
          <div data-beam="bb-4" data-active="" class="sd-border-beam" style="--beam-strength: 1; --beam-density: 1;">
            <div style="padding: 14px 22px; background: rgb(255, 255, 255); border-radius: 16px; color: rgb(51, 51, 51);">auto</div>
            <div data-beam-bloom=""></div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
